--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "open_colors"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+authors = ["Tomas Rawski <rtomas@gmail.com>"]
 edition = "2021"
 
 [dependencies]
